--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <div class="class flex-container menu">
+        <div class="flex-container menu">
             <div>
                 <h1>FlexTurismos</h1>
             </div>
@@ -26,14 +26,14 @@
         <div class="texto-apresentacao ">
             <h1>Flex <br>Turismos</h1>
             <p>O melhor serviço para você!</p>
-            <a href="">Saiba Mais!</a>
+            <a href="#"class="btn">Saiba Mais!</a>
         </div>
 
         <div>
             <div><img src="./images/0-main.png" alt="banner de apresentação"></div>
         </div>
     </div>
-    <div class="class flex-container" id="quem-somos">
+    <div class=" flex-container" id="quem-somos">
         <div>
             <img src="./images/1-quem-somos.png" alt="balcão de atendimento">
         </div>
@@ -77,24 +77,25 @@
 
 
     </div>
-            <div class="class flex-container" id="planos">
+            <div class="flex-container" id="planos">
 
                 <div><h2>Planos</h2></div>
 
                 <div class="list-planos">
 
                     <div class="item-plano">
-                        <h3>Plano 2</h3>
+                        <h3>Plano 1</h3>
                         <ul>
                             <li>Suporte 24h</li>
                             <li>Serviços de quarto</li>
                             <li>Guia turístico</li>
                         </ul>
-                        <a href="#">Saiba Mais!</a>
+                        <a href="#" class="btn">Saiba Mais!</a>
                     </div>
 
                     <div class="item-plano">
                         <h3>Plano 2</h3>
+                        <br>
                         <ul>
                             <li>Suporte 24h</li>
                             <li>Serviços de quarto</li>
@@ -102,11 +103,11 @@
                             <li>Roteiro de trilhas</li>
                             <li>Serviço personalizado</li>
                         </ul>
-                        <a href="#">Saiba Mais!</a>
+                        <a href="#" class="btn">Saiba Mais!</a>
                     </div>
-
                     <div class="item-plano">
                         <h3>Plano 3</h3>
+                        <br>
                         <ul>
                             <li>Suporte 24h</li>
                             <li>Serviços de quarto</li>
@@ -115,16 +116,17 @@
                             <li>Serviço personalizado</li>
                             <li>Área Vip</li>
                         </ul>
-                        <a href="#">Saiba Mais!</a>
+                        <a href="#"class="btn">Saiba Mais!</a>
                     </div>
                 </div>
-
 
             </div>
 
             <footer>
+                <div class="flex-container footer">
                 <p>&copy; 2021 CSS Flexbox</p>
                 <p>Desenvolvido por: Larissa Cruz</p>
+            </div>
             </footer>
 </body>
 
